pipe and minor fixes

--- a/manifest.json
+++ b/manifest.json
@@ -24,7 +24,7 @@
       }
     },
     {
-      "name": "Create_Role_User"
+      "name": "Get_Account_By_Identifier"
     },
     {
       "name": "LogisticsAdmin"
