--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "app-store-setup",
-  "vendor": "vtex",
+  "name": "configuration",
+  "vendor": "extensions",
   "version": "0.0.1",
   "title": "App Store Setup",
   "description": "Service that automates seller configuration for app store selling",
@@ -9,7 +9,8 @@
   "dependencies": {},
   "builders": {
     "node": "6.x",
-    "docs": "0.x"
+    "docs": "0.x",
+    "vtex.channels-setup": "0.x"
   },
   "scripts": {
     "prereleasy": "bash lint.sh"
